add @Security BearerAuth annotation for swagger
